forth/test/fail/test_numeric_literal_not_terminated.af
\ Must fail to compile.
123abc
